# hstrat

./: .bumpversion.cfg  .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  HereditaryStratigraphicColumn.py  HereditaryStratigraphicColumnBundle.py  HereditaryStratum.py  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RankLabeledHereditaryStratum.py  StratumRetentionPredicateDepthProportionalResolution.py  StratumRetentionPredicateMaximal.py  StratumRetentionPredicateMinimal.py  StratumRetentionPredicateRecencyProportionalResolution.py  StratumRetentionPredicateRecursiveInterspersion.py  StratumRetentionPredicateStochastic.py  __init__.py  assert_accurate_type_stubs.py  attach_attrs.py  binary_search.py  build.sh  cyclify.py  doubling_search.py  lint.sh  pyproject.toml  pytest.ini  requirements_dev.in  requirements_dev.txt  setup.cfg  (+8 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  ci.yaml  heavy-nightly.yaml  heavy-weekly.yaml
docs/: Makefile  api.rst  citing.md  conf.py  demo-ping.ipynb  index.rst  index_stage1.rst  index_stage2.rst  installation.rst  make.bat  mechanism.md  policies.md  projects.md  publications.md  quickstart.ipynb  quickstart.md  usage.rst
docs/_autosummary/: _modules.rst  hstrat.helpers.AnyTreeAscendingIter.rst  hstrat.helpers.attach_attrs.rst  hstrat.helpers.rst  hstrat.hstrat.HereditaryStratigraphicColumn.rst  hstrat.hstrat.HereditaryStratigraphicColumnBundle.rst  hstrat.hstrat.HereditaryStratum.rst  hstrat.hstrat.HereditaryStratumOrderedStoreDict.rst  hstrat.hstrat.HereditaryStratumOrderedStoreList.rst  hstrat.hstrat.HereditaryStratumOrderedStoreTree.rst  hstrat.hstrat.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerDepthProportionalResolution.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerFixedResolution.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerFromPredicate.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerNominalResolution.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerPerfectResolution.rst  hstrat.hstrat.stratum_retention_condemners.StratumRetentionCondemnerRecencyProportionalResolution.rst  hstrat.hstrat.stratum_retention_condemners.rst  hstrat.hstrat.stratum_retention_predicates.StratumRetentionPredicateDepthProportionalResolution.rst  hstrat.hstrat.stratum_retention_predicates.StratumRetentionPredicateFixedResolution.rst  hstrat.hstrat.stratum_retention_predicates.StratumRetentionPredicateNominalResolution.rst  hstrat.hstrat.stratum_retention_predicates.rst  (+28 more)
example/: __init__.py  example.py
examples/: README.md  _SimpleGenomeAnnotatedWithDenseRetention.py  _SimpleGenomeAnnotatedWithSparseRetention.py  _serialization_pop.py  _test_reconstruct.py  _visualize_phylogenies.py  ascii_stratum_retention_viz.py  end2end_tree_reconstruction_test.py  end2end_tree_reconstruction_with_dstream_surf.sh  end2end_tree_reconstruction_with_dstream_surf_test.sh  evolve_dstream_surf.py  evolve_surf_dstream.py  hstrat  naive_shortcut_comparison_data_generation.sh  pairwise_inference.py  policy_parameterization.py  population_inference.py  run_all.sh  serialization_col.py  serialization_pop.py  surface_build_tree_cli.sh  surface_unpack_reconstruct_cli.sh  test_drive.py  tree_reconstruction.py  tree_reconstruction_col.py
helpers/: __init__.py  binary_search.py  doubling_search.py  iterify.py
hstrat/: HereditaryStratigraphicColumn.py  HereditaryStratigraphicColumnBundle.py  HereditaryStratum.py  HereditaryStratumOrderedStoreDict.py  HereditaryStratumOrderedStoreList.py  HereditaryStratumOrderedStoreTree.py  __init__.py  __init__.pyi  __main__.py
joss/: paper.bib  paper.md
requirements-dev/: py311  py38  py39  regenerate.sh  requirements-all.txt  requirements-all.txt~master  requirements-all.txt~origin_vivaan  requirements-docs.txt  requirements-docs.txt~master  requirements-jit.txt  requirements-jit.txt~origin_vivaan  requirements-minimal.txt  requirements-minimal.txt~master  requirements-release.txt  requirements-release.txt~master  requirements-testing.txt  requirements-testing.txt~origin_vivaan
test/: __init__.py  run_tests.sh  test_HereditaryStratigraphicColumn.py  test_HereditaryStratum.py  test_RankLabeledHereditaryStratum.py  test_StratumRetentionPredicateDepthProportionalResolution.py  test_StratumRetentionPredicateFixedResolution.py  test_StratumRetentionPredicateMaximal.py  test_StratumRetentionPredicateMinimal.py  test_StratumRetentionPredicateRecencyProportionalResolution.py  test_StratumRetentionPredicateRecursiveInterspersion.py  test_StratumRetentionPredicateStochastic.py  test_attach_attrs.py  test_binary_search.py  test_cyclify.py  test_doubling_search.py  test_iterify.py  test_stratum_retention_predicate_maximal.py  test_stratum_retention_predicate_minimal.py  test_value_or.py
test_include/: Makefile  MaketemplateForwarding.mak  MaketemplateRunning.mak
test_include/draft/: CMakeLists.txt
tests-cli/: run_all.sh  test_dataframe_surface_build_tree.sh  test_dataframe_surface_build_tree_check_trie_invariant.sh  test_dataframe_surface_build_tree_cmp.sh  test_dataframe_surface_build_tree_iso.sh  test_dataframe_surface_build_tree_iso___no_delete_trunk.sh  test_dataframe_surface_postprocess_trie.sh  test_dataframe_surface_postprocess_trie_cmp.sh  test_dataframe_surface_unpack_reconstruct.sh  test_dataframe_surface_unpack_reconstruct_cmp.sh  test_dataframe_surface_unpack_reconstruct_iso.sh  test_dataframe_surface_validate_trie.sh
tidy/: assert_accurate_type_stubs.py  test_2space_indentation.sh  test_accurate_type_stubs.py  test_accurate_type_stubs.sh  test_alphabetize_includes.sh  test_boilerplate.sh  test_end_of_file_newlines.sh  test_filename_whitespace.sh  test_lint.sh  test_make_clean.sh  test_merge_conflict_markers.sh  test_modern_suffixes.sh  test_partition_includes.sh  test_style.sh  test_tabs.sh  test_tidy.sh  test_trailing_whitespace.sh  test_type_stubs_up_to_date.sh
(+3085 files in other folders)
