[project]
authors = [
  {name = "Matthew Andres Moreno", email="m.more500@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
# end-user requirements
dependencies = [
  "alifedata_phyloinformatics_convert>=0.11.0",
  "anytree>=2.8.0",
  "biopython>=1.79",
  "bitarray>=2.6.2",
  "bitstring>=3.1.9",
  "dendropy>=4.5.2",
  "Deprecated>=1.2.13",
  "iterpop>=0.3.4",
  "interval_search>=0.3.1",
  "keyname>=0.4.1",
  "lru-dict>=1.1.7",
  "matplotlib>=3.5.2",
  "mmh3>=3.0.0",
  "networkx>=2.6.3",
  "numpy>=1.17.2",
  "more-itertools>=8.13.0",
  "mpmath>=1.1.0",
  "opytional>=0.1.0",
  "ordered_set>=4.1.0",
  "packaging>=23.0",
  "pandas>=1.0.0,<2",
  "pandera>=0.13.4",
  "prettytable>=3.5.0",
  "python-slugify>=6.1.2",
  "safe_assert>=0.2.0",
  "seaborn>=0.11.0",
  "sortedcontainers>=2.4.0",
  "typing_extensions>=4.7.1",
  "tqdm>=4.62.3",
]
description = "hstrat enables phylogenetic inference on distributed digital evolution populations"
license = {text = "MIT license"}
name  =  "hstrat"
keywords = [
  "hstrat",
]
requires-python = ">=3.7"
version = "1.8.2"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/hstrat"
documentation = "https://hstrat.readthedocs.io"
repository = "https://github.com/mmore500/hstrat"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

# adapted from https://tox.wiki/en/latest/example/package.html
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=0.29",
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

# additional dev requriements
# used to generated requirements in dev-requirements/
[project.optional-dependencies]
pinned_dependencies_py37 = [
  "alifedata_phyloinformatics_convert==0.11.0",
  "anytree==2.8.0",
  "biopython==1.79",
  "bitarray==2.6.2",
  "bitstring==3.1.9",
  "dendropy==4.5.2",
  "Deprecated==1.2.13",
  "iterpop==0.4.1",
  "interval-search==0.3.1",
  "keyname==0.4.1",
  "lru-dict==1.1.8",
  "matplotlib==3.5.2",
  "mmh3==3.0.0",
  "more-itertools==8.13.0",
  "mpmath==1.2.1",
  "networkx==2.6.3",
  "numpy==1.21.6",
  "opytional==0.1.0",
  "ordered_set==4.1.0",
  "pandas==1.3.5",
  "pandera==0.13.4",
  "packaging==23.0",
  "prettytable==3.5.0",
  "python-slugify==6.1.2",
  "safe_assert==0.2.0",
  "seaborn==0.11.0",
  "sortedcontainers==2.4.0",
  "tqdm==4.62.3",
]
pinned_dependencies_py310 = [
  "alifedata_phyloinformatics_convert==0.11.0",
  "anytree==2.8.0",
  "biopython==1.79",
  "bitarray==2.6.2",
  "bitstring==3.1.9",
  "dendropy==4.5.2",
  "Deprecated==1.2.13",
  "iterpop==0.4.1",
  "interval-search==0.3.1",
  "keyname==0.4.1",
  "lru-dict==1.1.8",
  "matplotlib==3.6.3",
  "mmh3==3.0.0",
  "more-itertools==8.13.0",
  "mpmath==1.2.1",
  "networkx==2.6.3",
  "numpy==1.23.5",
  "opytional==0.1.0",
  "ordered_set==4.1.0",
  "packaging==23.0",
  "pandas==1.5.3",
  "pandera==0.13.4",
  "prettytable==3.5.0",
  "python-slugify==6.1.2",
  "safe_assert==0.2.0",
  "seaborn==0.11.0",
  "sortedcontainers==2.4.0",
  "tqdm==4.62.3",
]
jit = ["numba>=0.56.4"]
pinned_jit = ["numba==0.56.4"]
testing_py37 = [
  "contexttimer==0.3.3",
  "coverage==6.4.4",
  "flake8==3.7.8",
  "iterify==0.1.0",
  "more-itertools==8.13.0",
  "mypy==0.991",
  "pytest-xdist==2.5.0",
  "pytest==7.1.2",
  "pyyaml==5.3.1",
  "safe-assert==0.2.0",
  "setuptools",
  "scipy==1.7.3",
  "teeplot==0.4.0",
  "tox==3.24.0",
  "tqdist==1.0",
]
testing_py310 = [
  "contexttimer==0.3.3",
  "coverage==6.4.4",
  "flake8==3.7.8",
  "iterify==0.1.0",
  "more-itertools==8.13.0",
  "mypy==0.991",
  "pytest-xdist==2.5.0",
  "pytest==7.1.2",
  "pyyaml==5.3.1",
  "safe-assert==0.2.0",
  "setuptools",
  "scipy==1.9.3",
  "teeplot==0.4.0",
  "tox==3.24.0",
  "tqdist==1.0",
]
release = [
  "bumpver==2022.1120",
  "twine==1.14.0",
  "wheel==0.33.6",
  "pip==22.0.4",
  "pip_tools==6.10.0",
  "setuptools==65.6.3",
]
docs = [
  "Sphinx==4.4.0",
  "sphinx_rtd_theme==1.0.0",
]

[tool.black]
line_length = 79
# due to some weird circular symlink issue
extend_exclude = "requirements-dev"

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true
