[project]
authors = [
  {name = "Matthew Andres Moreno", email="m.more500@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
# end-user requirements
dependencies = [
  "alifedata_phyloinformatics_convert>=0.17.0",
  "anytree>=2.8.0",
  "biopython>=1.79",
  "bitarray>=2.6.2",
  "bitstring>=3.1.9",
  "dendropy>=4.5.2",
  "Deprecated>=1.2.13",
  "downstream>=1.4.0",
  "iterpop>=0.3.4",
  "interval_search>=0.3.1",
  "joinem>=0.9.1",
  "keyname>=0.4.1",
  "lazy_loader>=0.4",
  "lru-dict>=1.1.7",
  "matplotlib>=3.5.2",
  "mmh3>=3.0.0",
  "networkx>=2.6.3",
  "numpy>=2",
  "more-itertools>=8.13.0",
  "mpmath>=1.1.0",
  "opytional>=0.1.0",
  "ordered_set>=4.1.0",
  "polars[pyarrow]>=1.0.0",
  "polars-u64-idx>=1.0.0",
  "packaging>=23.0",
  "pandas>=2",
  "pandera>=0.21.0",
  "prettytable>=3.5.0",
  "python-slugify>=6.1.2",
  "safe_assert>=0.2.0",
  "seaborn>=0.11.0",
  "sortedcontainers>=2.4.0",
  "statsmodels>=0.14.4",
  "typing_extensions>=4.7.1",
  "tqdm>=4.62.3",
]
description = "hstrat enables phylogenetic inference on distributed digital evolution populations"
license = {text = "MIT license"}
name  =  "hstrat"
keywords = [
  "hstrat",
]
requires-python = ">=3.10"
version = "1.15.1"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/hstrat"
documentation = "https://hstrat.readthedocs.io"
repository = "https://github.com/mmore500/hstrat"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

# adapted from https://tox.wiki/en/latest/example/package.html
# adapted from https://pybind11.readthedocs.io/en/stable/compiling.html
[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core",
  "setuptools >= 75.0.0",
  "setuptools_scm >= 2.0.0, <3",
  "pybind11",
]

# additional dev requriements
# used to generated requirements in dev-requirements/
[project.optional-dependencies]
jit = ["cppimport>=22.8.2", "numba>=0.60.0"]
testing = [
  "contexttimer==0.3.3",
  "coverage==6.4.4",
  "flake8==3.7.8",
  "iterify==0.1.0",
  "more-itertools==8.13.0",
  "mypy==0.991",
  "phylotrackpy==0.2.4",
  "pytest-xdist==2.5.0",
  "pytest==8.3.3",
  "pyyaml==6.0.1",
  "ruff==0.1.11",
  "safe-assert==0.2.0",
  "scipy==1.14.1",
  "teeplot==0.4.0",
  "tox==3.24.0",
  "tqdist==1.0",
]
release = [
  "bumpver==2022.1120",
  "pybind11==2.13.6",
  "setuptools==75.5.0",
  "setuptools-scm==8.1.0",
  "twine==1.14.0",
  "uv==0.4.18",
  "wheel==0.45.0",
]
docs = [
  "ipython==8.12.3",
  "ipykernel==6.26.0",
  "nbsphinx==0.9.3",
  "pybind11==2.13.6",
  "pyyaml==6.0.1",
  "Sphinx==8.1.3",
  "sphinx_rtd_theme==3.0.2",
]

[tool.black]
line_length = 79
# due to some weird circular symlink issue
extend_exclude = "requirements-dev"

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true

[tool.scikit-build]
sdist.exclude = ["docs/assets"]
